fix location error

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -210,7 +210,7 @@
                     <div class="p-3">
                         <h5>{{ weather.location.localtime }}</h5>
                         {% if actual %}
-                        <h4>Aktuální poloha</h4>
+                        <h4>Current location</h4>
                         {% endif %}
                         <h3>{{ weather.location.name }}</h3>
                         <span class="weather__description">{{ weather.current.condition.text }}</span>
